# iddd

./: .gitignore  Cargo.toml  docker-compose.yaml
common/: Cargo.toml
common/src/: lib.rs  types.rs  validate.rs
db/: enable-uuid-extension.sh  init-iam-db.sh
iam/: .env  Cargo.toml
iam/migrations/: 20241201134303_initial_setup.sql.down.sql  20241201134303_initial_setup.sql.up.sql
iam/sql/postgres/: delete_invitations.sql  delete_tenant.sql  delete_user.sql  find_all_users.sql  find_tenant_by_id.sql  find_tenant_by_name.sql  find_user_by_username.sql  insert_invitation.sql  insert_tenant.sql  insert_user.sql  update_tenant.sql  update_user.sql
iam/src/: main.rs
iam/src/domain/: mod.rs
iam/src/domain/access/: mod.rs  role.rs  role_repository.rs
iam/src/domain/identity/: contact_information.rs  email_address.rs  enablement.rs  full_name.rs  group.rs  group_member.rs  group_member_service.rs  group_repository.rs  invitation_descriptor.rs  mod.rs  password.rs  person.rs  postal_address.rs  registration_invitation.rs  telephone.rs  tenant.rs  tenant_id.rs  tenant_repository.rs  user.rs  user_descriptor.rs  user_repository.rs  validity.rs
iam/src/domain/identity/registration_invitation/: invitation_description.rs  invitation_id.rs  invitation_validity.rs
iam/src/domain/identity/tenant/: tenant_description.rs  tenant_id.rs  tenant_name.rs
iam/src/domain/identity/user/: enablement.rs  password.rs  person.rs  username.rs
iam/src/domain/identity/user/person/: contact_information.rs  full_name.rs
iam/src/domain/identity/user/person/contact_information/: postal_address.rs
iam/src/ports/adapters/postgres/: invitation.rs  mod.rs  tenant.rs  tenant_repository.rs  user_repository.rs
