[package]
name = "iam"
version = "0.1.0"
edition = "2021"
authors = ["Mauro Franceschini <mauro.franceschini@gmail.com>"]

[dependencies]
axum = { version = "0.7.7", features = ["macros", "tokio", "http1"] }
chrono = { version = "0.4.38", features = ["serde"] }
diesel = { version = "2.2.3", features = ["postgres", "uuid", "serde_json"] }
diesel_migrations = "2.2.0"
deadpool-diesel = { version = "0.6.1", features = ["postgres"] }
dotenvy = "0.15.7"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
tokio = { version = "1.39.3", features = ["sync", "macros", "rt-multi-thread"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.10.0", features = ["fast-rng", "v4", "serde"] }