[package]
name = "iam"
version = "0.1.0"
edition = "2021"
authors = ["Mauro Franceschini <mauro.franceschini@gmail.com>"]

[dependencies]
axum = { version = "0.7", features = ["macros", "tokio", "http1"] }
chrono = { version = "0.4.38", features = ["serde"] }
dotenvy = "0.15.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync", "macros", "rt-multi-thread"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.11.0", features = ["fast-rng", "v4", "serde"] }
sqlx = { version = "0.8.2" , features = ["runtime-tokio", "tls-native-tls", "postgres", "derive", "macros", "migrate", "uuid", "chrono"]}
thiserror = "2"
anyhow = "1.0.93"
argon2 = "0.5.3"
regex = "1.11.1"
common = { version = "0.1.0", path = "../common" }
rand = "0.8.5"
lazy_static = "1.5.0"
derive_more = { version = "1.0.0" , features = ["display", "deref", "from", "as_ref"]}

[profile.dev.package.sqlx-macros]
opt-level = 3
